--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,7 @@ bevy_renet = {version = "0.0.11", features = ["serde"]}
 bincode = "1.3.3"
 renet = "0.0.15"
 serde = "1.0.203"
+
+[[bin]]
+name = "server"
+path = "src/server/main.rs"
