--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,14 @@ edition = "2021"
 bevy = "0.13.2"
 bevy_renet = {version = "0.0.11", features = ["serde"]}
 bincode = "1.3.3"
+rand = "0.8.5"
 renet = "0.0.15"
 serde = "1.0.203"
 
 [[bin]]
 name = "server"
 path = "src/server/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/client/main.rs"
